--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">CryptsyTicker</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="settings_title">Filter Coins</string>
+    <string name="settings_heading">Filter Coins</string>
 
 </resources>
