--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="app_name">CryptsyTicker</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="settings_heading">Filter Coins</string>
+    <string name="settings_heading">Filter Coins:</string>
+    <string name="buy_table_heading1">Price:</string>
+    <string name="buy_table_heading2">BTC:</string>
+    <string name="sell_table_heading1">Price:</string>
+    <string name="sell_table_heading2">BTC:</string>
+    <color name="backgroundlight">#888888</color>
+    <color name="backgrounddark">#222222</color>
 
 </resources>
