Added CryptoCoin API, Initial Splash Screen, renamed to Altcoin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CryptsyTicker</string>
+    <string name="app_name">Altcoin</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="settings_heading">Filter Coins:</string>
+    <string name="settings_heading">Your Coins:</string>
     <string name="buy_table_heading1">Price:</string>
     <string name="buy_table_heading2">BTC:</string>
     <string name="sell_table_heading1">Price:</string>
     <string name="sell_table_heading2">BTC:</string>
+    <string name="welcome">Welcome</string>
+    <string name="guide">Please click the settings button to add some coins!</string>
     <color name="backgroundlight">#888888</color>
     <color name="backgrounddark">#222222</color>
 
